feat(laravel upgrade): Laravel upgraded to version 12

--- a/projects/placeholder/composer.json
+++ b/projects/placeholder/composer.json
@@ -12,22 +12,22 @@
         "php": "^8.2",
         "almasaeed2010/adminlte": "~3.1",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^11.0",
+        "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.5",
         "league/plates": "^3.5",
         "livewire/livewire": "^3.0",
-        "nwidart/laravel-modules": "^9.0",
+        "nwidart/laravel-modules": "^8.0",
         "wychrist/congregatecontract": "dev-main"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.6",
+        "barryvdh/laravel-debugbar": "^3.16",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^2.0",
         "laravel/sail": "^1.13",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^8.1",
-        "phpunit/phpunit": "^10.0",
+        "phpunit/phpunit": "^11.0",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
@@ -67,7 +67,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "wikimedia/composer-merge-plugin": true
+        }
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
